<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/encrypt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/encrypt_box_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/encrypt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="12dp"
            android:text="@string/encrypt_btn"
            android:textColor="@color/colorPrimaryDark" />

        <TextView android:id="@+id/encrypted_text"
            android:textColor="@color/colorAccent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/encrypted_text"
            android:gravity="center"/>

        <TextView android:id="@+id/decrypted_text"
            android:textColor="@color/colorAccent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/decrypted_text"
            android:gravity="center"/>

    </LinearLayout>
</ScrollView>
